@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>edu.umgc</groupId>
-	<artifactId>CaPPMS</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>CaPPMS</name>
+	<artifactId>CAPPMS</artifactId>
+    <version>1.0.0</version>
+	<name>CAPPMS</name>
 	<description>Capstone Project Proposal Management System</description>
 
 	<properties>
@@ -43,6 +43,22 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			 <plugin>
+                <inherited>true</inherited>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <runOrder>alphabetical</runOrder>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
